F7 Homepage barebone nearly finished (except View-Closer) Built Routing structure

--- a/meteor/client/main.css
+++ b/meteor/client/main.css
@@ -1,5 +1,7 @@
 /* CSS declarations go here */
-
+#__blaze-root{
+    height: 100%;
+}
 /*@media (max-width: 768px) {*/
     /*.view-left{*/
         /*width:240px;*/
