--- a/meteor/imports/ui/components/home/main/index.html
+++ b/meteor/imports/ui/components/home/main/index.html
@@ -1,7 +1,7 @@
 <template name="home_main">
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Wettkampkonfiguration</div>
+            <div class="center sliding">Wettkampfkonfiguration</div>
         </div>
     </div>
     <div class="page">
@@ -24,7 +24,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">Wettkampfart</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="Wettkampfart" id="pick-comp_type">
+                                    <input type="text" readonly placeholder="Wettkampfart" id="pick-comp_type">
                                 </div>
                             </div>
                         </div>
