Server UI Barebone Homepage Server UI Barebone Sports setup Server UI Barebone Athlete Setup

--- a/meteor/imports/ui/components/home/main/index.html
+++ b/meteor/imports/ui/components/home/main/index.html
@@ -36,7 +36,7 @@
     <div class="toolbar">
         <div class="toolbar-inner">
             <a class="link"></a>
-            <a href="/" class="link">Weiter</a>
+            <a href="" id="link_next" class="link">Weiter</a>
         </div>
     </div>
 </template>
