Fix Navbar Name to center

--- a/meteor/imports/ui/components/input/table/main/index.html
+++ b/meteor/imports/ui/components/input/table/main/index.html
@@ -10,6 +10,8 @@
                     </a>
                 </div>
                 <div class="center">Karl Mustermann</div>
+                <div class="right">
+                </div>
             </div>
         </div>
         <!-- Page Content -->
@@ -25,7 +27,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Erster Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in Metern">
+                                        <input type="text" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -36,7 +38,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Zweiter Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in Metern">
+                                        <input type="text" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -47,7 +49,46 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Dritter Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in Metern">
+                                        <input type="text" placeholder="Ergebnis in cm">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="content-block-title">Hochsprung</div>
+                <div class="list-block">
+                    <ul>
+                        <!-- Result input -->
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title label">Erster Versuch</div>
+                                    <div class="item input">
+                                        <input type="text" placeholder="Ergebnis in cm">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title label">Zweiter Versuch</div>
+                                    <div class="item input">
+                                        <input type="text" placeholder="Ergebnis in cm">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title label">Dritter Versuch</div>
+                                    <div class="item input">
+                                        <input type="text" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
