Added iOS WebApp to head and minor changes in the input ui

--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -56,6 +56,20 @@
                             </div>
                         </div>
                     </li>
+                    <!-- gender -->
+                    <li>
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="item-title label">Gender</div>
+                                <div class="item-input">
+                                    <select>
+                                        <option>Male</option>
+                                        <option>Female</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                     <!-- start_class -->
                     <li>
                         <div class="item-content">
