--- a/meteor/imports/ui/components/input/table/main/index.html
+++ b/meteor/imports/ui/components/input/table/main/index.html
@@ -3,6 +3,7 @@
         <!-- Navbar -->
         <div class="navbar">
             <div class="navbar-inner">
+
                 <div class="left">
                     <a href="#" class="link">
                         <i class="icon icon-back"></i>
@@ -10,8 +11,7 @@
                     </a>
                 </div>
                 <div class="center">Karl Mustermann</div>
-                <div class="right">
-                </div>
+                <div class="right"></div>
             </div>
         </div>
         <!-- Page Content -->
@@ -25,9 +25,9 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Erster Versuch</div>
+                                    <div class="item-title label">1. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -36,9 +36,9 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Zweiter Versuch</div>
+                                    <div class="item-title label">2. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -47,9 +47,9 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Dritter Versuch</div>
+                                    <div class="item-title label">3. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -64,9 +64,9 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Erster Versuch</div>
+                                    <div class="item-title label">1. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -75,9 +75,9 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Zweiter Versuch</div>
+                                    <div class="item-title label">2. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -86,9 +86,9 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Dritter Versuch</div>
+                                    <div class="item-title label">3. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -100,8 +100,8 @@
         <!-- Toolbar -->
         <div class="toolbar">
             <div class="toolbar-inner">
-                <a></a>
-                <a href="" id="link_next" class="item-link">Nächster Teilnehmer</a>
+                <a href="#" id="link_prev" class="item-link">Vorheriger</a>
+                <a href="#" id="link_next" class="item-link">Nächster</a>
             </div>
         </div>
     </div>
