--- a/meteor/imports/ui/components/input/table/main/index.html
+++ b/meteor/imports/ui/components/input/table/main/index.html
@@ -1,19 +1,225 @@
 <template name="table_main">
     <div class="view navbar-through">
+
+        <!-- Participant selection -->
+        <div class="panel-overlay"></div>
+        <div class="panel panel-left panel-cover">
+            <div class="content-block">
+                <p class="panel-title">Teilnehmer</p>
+
+                <div class="contacts-content">
+                    <div class="list-block contacts-block">
+                        <div class="list-group">
+                            <ul>
+                                <li class="group-title">A</li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Aaron Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Abbie Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Adam Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Adele Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Agatha Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Agnes Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Albert Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Alexander Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="list-group">
+                            <ul>
+                                <li class="group-title">B</li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Bailey Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Barclay Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Bartolo Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Bellamy Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Belle Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Benjamin Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="list-group">
+                            <ul>
+                                <li class="group-title">C</li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Caiden Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Calvin Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Candy Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Carl Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Cherilyn Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Chester Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Chloe Musterfrau</div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="list-group">
+                            <ul>
+                                <li class="group-title">K</li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Karl Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="list-group">
+                            <ul>
+                                <li class="group-title">V</li>
+                                <li>
+                                    <div class="contact-content">
+                                        <div class="item-inner">
+                                            <div class="item-title">Vladimir Mustermann</div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Click on link with "close-panel" class will close panel -->
+                <p><a href="#" class="close-panel">Abbrechen</a></p>
+            </div>
+        </div>
+
         <!-- Navbar -->
         <div class="navbar">
             <div class="navbar-inner">
-                <div class="left">
-                    <a href="#" class="link">
+               <div class="left">
+                    <a href="#" class="link open-panel">
                         <i class="icon icon-back"></i>
                         <span>Übersicht</span>
                     </a>
                 </div>
                 <div class="center">Karl Mustermann</div>
-                <div class="right">
-                </div>
+                <div class="right"></div>
             </div>
         </div>
+
         <!-- Page Content -->
         <div class="page">
             <div class="page-content">
