Minor changes in input ui (new button (designs) & shorter texts for mobile)

--- a/meteor/imports/ui/components/input/table/main/index.html
+++ b/meteor/imports/ui/components/input/table/main/index.html
@@ -211,12 +211,12 @@
             <div class="navbar-inner">
                <div class="left">
                     <a href="#" class="link open-panel">
-                        <i class="icon icon-back"></i>
-                        <span>Übersicht</span>
+                        <i class="icon icon-bars"></i>
+                        <span>Teilnehmer</span>
                     </a>
                 </div>
                 <div class="center">Karl Mustermann</div>
-                <div class="right"></div>
+                <div class="right"><a href="#">Abmelden</a></div>
             </div>
         </div>
 
@@ -231,7 +231,7 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Erster Versuch</div>
+                                    <div class="item-title label">1. Versuch</div>
                                     <div class="item input">
                                         <input type="text" placeholder="Ergebnis in cm">
                                     </div>
@@ -242,7 +242,7 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Zweiter Versuch</div>
+                                    <div class="item-title label">2. Versuch</div>
                                     <div class="item input">
                                         <input type="text" placeholder="Ergebnis in cm">
                                     </div>
@@ -253,7 +253,7 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Dritter Versuch</div>
+                                    <div class="item-title label">3. Versuch</div>
                                     <div class="item input">
                                         <input type="text" placeholder="Ergebnis in cm">
                                     </div>
@@ -270,7 +270,7 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Erster Versuch</div>
+                                    <div class="item-title label">1. Versuch</div>
                                     <div class="item input">
                                         <input type="text" placeholder="Ergebnis in cm">
                                     </div>
@@ -281,7 +281,7 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Zweiter Versuch</div>
+                                    <div class="item-title label">2. Versuch</div>
                                     <div class="item input">
                                         <input type="text" placeholder="Ergebnis in cm">
                                     </div>
@@ -292,7 +292,7 @@
                         <li>
                             <div class="item-content">
                                 <div class="item-inner">
-                                    <div class="item-title label">Dritter Versuch</div>
+                                    <div class="item-title label">3. Versuch</div>
                                     <div class="item input">
                                         <input type="text" placeholder="Ergebnis in cm">
                                     </div>
@@ -306,8 +306,8 @@
         <!-- Toolbar -->
         <div class="toolbar">
             <div class="toolbar-inner">
-                <a></a>
-                <a href="" id="link_next" class="item-link">Nächster Teilnehmer</a>
+                <a href="" id="link_prev" class="item-link">Vorheriger</a>
+                <a href="" id="link_next" class="item-link">Nächster</a>
             </div>
         </div>
     </div>
