Use number inputs for measurements

--- a/meteor/imports/ui/components/input/table/main/index.html
+++ b/meteor/imports/ui/components/input/table/main/index.html
@@ -233,7 +233,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">1. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -244,7 +244,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">2. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -255,7 +255,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">3. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -272,7 +272,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">1. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -283,7 +283,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">2. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
@@ -294,7 +294,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">3. Versuch</div>
                                     <div class="item input">
-                                        <input type="text" placeholder="Ergebnis in cm">
+                                        <input type="number" placeholder="Ergebnis in cm">
                                     </div>
                                 </div>
                             </div>
