Made login screen as a global overlay callable by Meteor.f7.loginScreen();

--- a/meteor/imports/ui/components/input/table/main/index.html
+++ b/meteor/imports/ui/components/input/table/main/index.html
@@ -216,7 +216,7 @@
                     </a>
                 </div>
                 <div class="center">Karl Mustermann</div>
-                <div class="right"><a href="#" class="logout-button">Abmelden</a></div>
+                <div class="right"><a href="#" class="logout-button open-login-screen">Abmelden</a></div>
             </div>
         </div>
 
