Gender selector translated to german

--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -60,11 +60,11 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label">Gender</div>
+                                <div class="item-title label">Geschlecht</div>
                                 <div class="item-input">
                                     <select>
-                                        <option>Male</option>
-                                        <option>Female</option>
+                                        <option>Männlich</option>
+                                        <option>Weiblich</option>
                                     </select>
                                 </div>
                             </div>
