New config home

--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -1,7 +1,7 @@
 <template name="codes">
     <!-- Navbar -->
     <div class="navbar">
-        <div class="navbar-hidden">
+        <div class="navbar-inner">
             <div class="center sliding">Zugangscodes</div>
         </div>
     </div>
