--- a/meteor/imports/ui/components/config/home/left/index.html
+++ b/meteor/imports/ui/components/config/home/left/index.html
@@ -2,7 +2,9 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Wettkampfauswahl</div>
+            <div class="left"></div>
+            <div class="center">Wettkampf wechseln</div>
+            <div class="right"></div>
         </div>
     </div>
     <!-- Page Content -->
@@ -14,7 +16,7 @@
                 <!-- File List -->
                 <ul>
                     <!-- List entry for a new competition -->
-                    <li><a id="link-new_competition" href="/" class="item-link" data-page="main-view">
+                    <li><a id="link-new_competition" href="/config/new" class="item-link" data-page="main-view">
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-title">Neuer Wettkampf</div>
@@ -25,7 +27,7 @@
                     <li><a href="/" class="item-link" data-page="main-view">
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title">EXAMPLE FILE</div>
+                                <div class="item-title">BJS OHG 2016</div>
                             </div>
                         </div>
                     </a></li>
@@ -33,7 +35,7 @@
                     <li><a id="link-open_path" href="/" class="item-link" data-page="main-view">
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title">Datei öffnen</div>
+                                <div class="item-title">BJS OHG 2015</div>
                             </div>
                         </div>
                     </a></li>
