--- a/meteor/imports/ui/components/config/home/main/index.html
+++ b/meteor/imports/ui/components/config/home/main/index.html
@@ -1,12 +1,14 @@
 <template name="home_main">
     <div class="navbar">
         <div class="navbar-inner">
-            <div class="center sliding">Wettkampfkonfiguration</div>
+            <div class="left"></div>
+            <div class="center">Aktueller Wettkampf</div>
+            <div class="right"></div>
         </div>
     </div>
     <div class="page">
         <div class="page-content">
-            <div class="content-block-title">Wettkampfattribute</div>
+            <div class="content-block-title">Hier findest du Informationen über den aktuellen Wettampf</div>
             <div class="list-block">
                 <ul>
                     <li>
@@ -14,7 +16,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">Name</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="Wettkampfname">
+                                    BJS OHG 2016
                                 </div>
                             </div>
                         </div>
@@ -24,19 +26,13 @@
                             <div class="item-inner">
                                 <div class="item-title label">Wettkampfart</div>
                                 <div class="item-input">
-                                    <input type="text" readonly placeholder="Wettkampfart" id="pick-comp_type">
+                                    Leichtatletik
                                 </div>
                             </div>
                         </div>
                     </li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div class="toolbar">
-        <div class="toolbar-inner">
-            <a class="link"></a>
-            <a href="" id="link_next" class="link">Weiter</a>
         </div>
     </div>
 </template>
